--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "worker-plugin": "^3.1.0"
+  },
+  "dependencies": {
+    "comlink": "^4.0.1"
   }
 }
