--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,8 @@
     "target": "es2017",
     "sourceMap": true,
     "lib": [
-      "WebWorker",
-      "ES2017",
-      "DOM"
+      "es2017",
+      "dom"
     ]
   },
   "exclude": [
