--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "0.2.7",
     "clean-webpack-plugin": "^2.0.2",
+    "css-loader": "^2.1.1",
     "elm-hot-webpack-loader": "^1.0.2",
     "elm-webpack-loader": "lgfrbcsgo/elm-webpack-loader#remove-elm",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
+    "tailwindcss": "^1.0.2",
     "ts-loader": "^6.0.0",
     "typescript": "^3.5.1",
     "webpack": "^4.31.0",
@@ -22,6 +25,7 @@
     "worker-plugin": "^3.1.0"
   },
   "dependencies": {
-    "comlink": "^4.0.1"
+    "comlink": "^4.0.1",
+    "elm-css-modules-loader": "^3.0.4"
   }
 }
