--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --env=prod"
   },
   "devDependencies": {
+    "@americanexpress/purgecss-loader": "^1.0.0",
     "@wasm-tool/wasm-pack-plugin": "0.2.7",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
@@ -15,6 +16,7 @@
     "elm-webpack-loader": "lgfrbcsgo/elm-webpack-loader#remove-elm",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "tailwindcss": "^1.0.2",
     "ts-loader": "^6.0.0",
