--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "2.0.0",
   "license": "Apache-2.0/MIT",
   "scripts": {
-    "start": "webpack-dev-server -d --env=dev",
-    "build": "webpack --env=prod"
+    "start": "webpack-dev-server -d",
+    "build": "webpack -p"
   },
   "devDependencies": {
-    "@americanexpress/purgecss-loader": "^1.0.0",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "@wasm-tool/wasm-pack-plugin": "0.2.7",
+    "autoprefixer": "^9.5.1",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
     "elm-hot-webpack-loader": "^1.0.2",
     "elm-webpack-loader": "lgfrbcsgo/elm-webpack-loader#remove-elm",
     "file-loader": "^3.0.1",
