--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@types/node": "^12.0.4",
     "@wasm-tool/wasm-pack-plugin": "0.2.7",
     "autoprefixer": "^9.5.1",
     "clean-webpack-plugin": "^2.0.2",
