--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "2.0.0",
   "license": "Apache-2.0/MIT",
   "scripts": {
-    "start": "webpack-dev-server -d",
-    "build": "webpack -p"
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
