--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "worker-plugin": "^3.1.0"
   },
   "dependencies": {
-    "comlink": "^4.0.1"
+    "comlink": "^4.0.1",
+    "text-encoding": "^0.7.0"
   }
 }
