--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "worker-plugin": "^3.1.0"
   },
   "dependencies": {
-    "comlink": "^4.0.1",
-    "text-encoding": "^0.7.0"
+    "comlink": "^4.0.1"
   }
 }
