--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,14 @@ before_install:
   - nvm install 10.15.3
   - nvm use 10.15.3
   - npm install -g elm@0.19.0-no-deps
+  - npm install -g elm-test@0.19.0-rev6
 
 install:
   - npm install
 
 script:
   - npm run build
+  - elm-test
 
 deploy:
   provider: pages
