--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 before_install:
   # only install wasm-pack if we haven't cached it already
-  - '[ "${wasm-pack -V}" == "wasm-pack 0.8.1" ] || cargo install wasm-pack --version 0.8.1 --force'
+  - '[ "$(wasm-pack -V)" == "wasm-pack 0.8.1" ] || cargo install wasm-pack --version 0.8.1 --force'
 
   - nvm install 10.15.3
   - nvm use 10.15.3
