--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN
+  github_token: $UVDIILUBQYPWHENQJRWJBKVH
   keep_history: true
   on:
     branch: master
