--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ before_install:
 
   - nvm install 10.15.3
   - nvm use 10.15.3
-  - npm install -g elm@0.19.0-no-deps
-  - npm install -g elm-test@0.19.0-rev6
-  - npm install -g elm-format@0.8.1
+  - npm install -g elm@0.19.0-no-deps elm-test@0.19.0-rev6 elm-format@0.8.1
 
 install:
   - npm install
