--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "elm-hot-webpack-loader": "^1.0.2",
     "elm-webpack-loader": "lgfrbcsgo/elm-webpack-loader#remove-elm",
     "file-loader": "^3.0.1",
+    "handlebars": "^4.1.2",
+    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "typescript": "^3.5.1",
