Decode image data in main thread since it is way faster on mobile

--- a/src/worker/wasm/Cargo.toml
+++ b/src/worker/wasm/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies.image]
 version = "0.21.1"
 default-features = false
-features = ["dxt", "png_codec"]
+features = ["dxt"]
 
 [dependencies]
 ddsfile = "0.2.3"
