--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "@types/node": "^12.0.4",
     "@wasm-tool/wasm-pack-plugin": "0.2.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^3.0.0",
+    "cssnano": "^4.1.10",
     "elm-css-modules-loader": "^3.0.4",
     "elm-hot-webpack-loader": "^1.0.2",
     "elm-webpack-loader": "lgfrbcsgo/elm-webpack-loader#remove-elm",
@@ -25,6 +27,7 @@
     "handlebars": "^4.1.2",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "typescript": "^3.5.1",
     "url-loader": "^1.1.2",
