--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
   - nvm install 10.15.3
   - nvm use 10.15.3
-  - npm install -g elm@0.19.0-no-deps elm-test@0.19.0-rev6 elm-format@0.8.1
+  - npm install -g elm@0.19.1-1 elm-test@0.19.1 elm-format@0.8.2
 
 install:
   - npm ci
